--- a/www/inicio.html
+++ b/www/inicio.html
@@ -104,10 +104,11 @@
     <script type="text/javascript" src="cordova.js"></script>
     <!--SCRIPTS BASICOS-->
     <!--<script src="scripts/jquery-2.1.4.js"></script>-->
-    <script src="scripts/jquery-2.2.1.min.js"></script>
+    <script type="text/javascript" src="scripts/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/my.accounting.min.js"></script>
+    <script type="text/javascript" src="scripts/jquery.price_format.2.0.min.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
     <script type="text/javascript" src="scripts/jsmodel/wscotacao.js"></script>
 
