--- a/www/index.html
+++ b/www/index.html
@@ -41,13 +41,12 @@
     <div>
         <div class="header">
             <!--<a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>-->
-            <a ><i></i></a>
+            <a><i></i></a>
             <a class="header-logo">eXCHANGE</a>
             <a href="#"><i></i></a>
         </div>
         <div class="header-clear"></div>
         <div class="header-clear"></div>
-
         <div class="content">
             <div class="container no-bottom">
                 <div class="no-bottom">
@@ -55,7 +54,7 @@
                         <!--<fieldset>-->
                         <label class="input-label"><strong> Entrar </strong></label>
                         <input type="email" name="contactNameField" value="" class="contactField  " id="EMAIL" placeholder="E-mail" required />
-                        <input type="password" name="contactNameField" value="" class="contactField" id="SENHA" placeholder="Senha" required  />
+                        <input type="password" name="contactNameField" value="" class="contactField" id="SENHA" placeholder="Senha" required />
                         <!--</fieldset>-->
                     </div>
                     <div class="static-notification-exchange-login" style="border-radius: 10px;" onclick="BuscaLogin();">
@@ -63,23 +62,22 @@
                     </div>
                     <div class="static-notification-exchange-login" style="border-radius: 10px;" onclick="Registrar();">
                         <p class=" center-text" style="color: #0489B1; font-size: 15px;">
-                        Cadastrar</p>
+                            Cadastrar
+                        </p>
                     </div>
-
-                   
-        </div>
-    </div>
+                </div>
+            </div>
             <div style="font-size:32px; text-align:center;">
-
                 <div class='one-half'>
-                  <i class="fa fa-facebook-f" style="color:white;"></i>
+                    <i class="fa fa-facebook-f" style="color:white;"></i>
                 </div>
                 <div class='two-half last-column'>
                     <i class="fa fa-google-plus" style="color:white;"></i>
                 </div>
             </div>
+        </div>
+    </div>
 </body>
-
 </html>
 
 
