--- a/www/inicio.html
+++ b/www/inicio.html
@@ -100,6 +100,7 @@
         <div id="maincontent">
 
         </div>
+        <div id="wait" style="display:none;width:69px;height:89px;border:1px solid black;position:absolute;top:50%;left:50%;padding:2px;"><img src='demo_wait.gif' width="64" height="64" /><br>Loading..</div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <!--SCRIPTS BASICOS-->
@@ -115,7 +116,7 @@
     <!--SCRIPTS DE PÁGINAS-->
     <script type="text/javascript" src="scripts/paginas/inicio.js"></script>
 
-
+ 
    
 </body>
 </html>
