--- a/www/deposito.html
+++ b/www/deposito.html
@@ -40,13 +40,13 @@
                                     <select name="DEPOSITO" class="contactFieldExchange" id="DEPOSITO" ></select>
                                     <label class="contact-text">Valor da transação</label>
                                     <input type="text" name="VALOR" value="" class="contactFieldExchange" id="VALOR" placeholder="Valor" disabled />
-                                    <label class="contact-text">Data nº da transação</label>
+                                    <label class="contact-text">Data da transação</label>
                                     <input type="text" name="DATA" value="" class="contactFieldExchange" id="DATA" placeholder="Data da transação" required />
                                     <label class="contact-text">Nº da transação</label>
                                     <input type="text" name="NUM_DOC" value="" class="contactFieldExchange" id="NUM_DOC" placeholder="Nº da transação" required />
                                     <div class="static-notification-exchange" onclick="ClkConfirmarDeposito()">
                                         <p class="center-text" style="color:white">
-                                            Confrmar
+                                            Confirmar
                                         </p>
                                     </div>
                                 </div>
@@ -57,12 +57,10 @@
             </div>
         </div>
     </div>
-    <!--<script src="scripts/jquery-2.1.4.js"></script>-->
-    <script src="scripts/jquery-2.1.4min.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script src="scripts/framework.plugins.min.js"></script>
-    <!--<script type="text/javascript" src="scripts/framework.plugins.js"></script>-->
     <script type="text/javascript" src="scripts/custom.js"></script>
+    <script type="text/javascript" src="scripts/jquery.price_format.2.0.min.js"></script>
 
     <script type="text/javascript">
 
@@ -70,6 +68,7 @@
         jQuery('#CPF').inputmask("999.999.999-99");
         jQuery('#CEP').inputmask("99999-999");
         jQuery('#FONE').inputmask("(999) 99999-9999");
+        jQuery('#VALOR').priceFormat({ prefix: 'R$ ', centsSeparator: ',', thousandsSeparator: '.' });
 
     </script>
 
