--- a/www/favoritos.html
+++ b/www/favoritos.html
@@ -28,9 +28,11 @@
             <br />
         </div>
         <!--<script src="scripts/jquery-2.1.4.js"></script>-->
-        <script src="scripts/jquery-2.1.4min.js"></script>
+        <!--<script src="scripts/jquery-2.1.4min.js"></script>-->
+        <!--<script src="scripts/jquery-2.2.1.min.js"></script>-->
+        <script src="scripts/jquery-2.2.1.js"></script>
         <script type="text/javascript" src="scripts/jqueryui.js"></script>
-        <!--<script type="text/javascript" src="scripts/framework.plugins.js"></script>-->
+        <script type="text/javascript" src="scripts/framework.plugins.js"></script>
         <script src="scripts/framework.plugins.min.js"></script>
         <script type="text/javascript" src="scripts/custom.js"></script>
         <script src="scripts/paginas/favoritos.js"></script>
