--- a/www/mapas.html
+++ b/www/mapas.html
@@ -29,7 +29,8 @@
 
     </div>
 
-    <script src="scripts/jquery-2.1.4.js"></script>
+    <!--<script src="scripts/jquery-2.1.4.js"></script>-->
+    <script src="scripts/jquery-2.2.1.min.js"></script>
     <script src="leaflet/leaflet.js"></script>
 
     <script src="leaflet-routing-machine/leaflet-routing-machine.js"></script>
