--- a/www/compras.html
+++ b/www/compras.html
@@ -28,7 +28,8 @@
                 <br />
             </div>
         </fieldset>
-        <script src="scripts/jquery-2.1.4min.js"></script>
+        <!--<script src="scripts/jquery-2.2.1.min.js"></script>-->
+        <!--<script src="scripts/jquery-2.1.4min.js"></script>-->
         <!--<script type="text/javascript" src="scripts/jquery-2.1.4.js"></script>-->
         <script type="text/javascript" src="scripts/jqueryui.js"></script>
         <script src="scripts/framework.plugins.min.js"></script>
