--- a/www/contato.html
+++ b/www/contato.html
@@ -29,7 +29,8 @@
 
         </div>
         <!--<script type="text/javascript" src="scripts/jquery-2.1.4.js"></script>-->
-        <script src="scripts/jquery-2.1.4min.js"></script>
+        <!--<script src="scripts/jquery-2.1.4min.js"></script>-->
+        <script src="scripts/jquery-2.2.1.min.js"></script>
         <script type="text/javascript" src="scripts/jqueryui.js"></script>
         <!--<script type="text/javascript" src="scripts/framework.plugins.js"></script>-->
         <script src="scripts/framework.plugins.min.js"></script>
