--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -9,7 +9,7 @@
         <div class="header">
             <a class="open-nav" href="#"><i class="fa fa-navicon"></i></a>
             <a class="header-logo">eXCHANGE</a>
-            <a><i></i></a>
+            <a data-toggle="modal" data-target="#myModal"><i class="fa fa-filter" ></i></a>
         </div>
         <div class="header-clear-small"></div>
         <div class="content">
@@ -17,13 +17,8 @@
                 <div class="no-bottom">
                     <div>
                         <fieldset>
-                            <label class="input-label"><strong> Busca </strong></label>                            <!--<label class="input-label">Sua moeda</label>-->
+                            <label class="input-label"><strong> Busca </strong></label>                        
                             <select name="" class="contactField" id="SUA_MOEDA" onchange="Buscar('DISTANCIA', true);"></select>
-                            <!--<label class="input-label">Qual procura?</label>-->
-                            <!--<select name="" class="contactField" id="MOEDA_PROCURA"></select>-->
-                            <!--<label class="input-label">Qual é a transação?</label>-->
-                            <!--<select name="" class="contactField" id="TRANSACAO"></select>-->
-
                         </fieldset>
                     </div>
                 </div>
@@ -34,6 +29,8 @@
                 <div class="no-bottom">
                     <div>
                         <fieldset>
+                             <div id="DIVFILTRO">
+                             </div>
                             <div id="DIVESTABELECIMENTO">
                             </div>
                         </fieldset>
@@ -44,10 +41,8 @@
             <br />
         </div>
     </div>
-    <!--<script src="scripts/jquery-2.1.4.js"></script>-->
-    <script src="scripts/jquery-2.1.4min.js"></script>
+    <script src="scripts/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
-    <!--<script src="scripts/framework.plugins.min.js"></script>-->
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
 </body>
