--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,8 @@
 
     <script type="text/javascript" src="cordova.js"></script>
     <!--SCRIPTS BASICOS-->
-    <script type="text/javascript" src="scripts/jquery-2.1.4.js"></script>
+    <!--<script type="text/javascript" src="scripts/jquery-2.1.4.js"></script>-->
+    <script src="scripts/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
