--- a/www/pg_contato.html
+++ b/www/pg_contato.html
@@ -48,7 +48,8 @@
         <div class="contact-text" >Estabelecimento sem cotação disponível</div>
     </div>-->
 
-    <script src="scripts/jquery-2.1.4.js"></script>
+    <!--<script src="scripts/jquery-2.1.4.js"></script>-->
+    <script src="scripts/jquery-2.2.1.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
