--- a/www/operacao.html
+++ b/www/operacao.html
@@ -96,7 +96,8 @@
         </div>
     </div>
     <!---->
-    <script src="scripts/jquery-2.1.4min.js"></script>
+    <!--<script src="scripts/jquery-2.1.4min.js"></script>-->
+    <script src="scripts/jquery-2.2.1.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
     <script src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
