--- a/www/estabelecimento.html
+++ b/www/estabelecimento.html
@@ -17,13 +17,8 @@
                 <div class="no-bottom">
                     <div>
                         <fieldset>
-                            <label class="input-label"><strong> Busca </strong></label>                            <!--<label class="input-label">Sua moeda</label>-->
-                            <select name="" class="contactField" id="SUA_MOEDA" onchange="BuscarEstabelecimento('DISTANCIA', true);"></select>
-                            <!--<label class="input-label">Qual procura?</label>-->
-                            <!--<select name="" class="contactField" id="MOEDA_PROCURA"></select>-->
-                            <!--<label class="input-label">Qual é a transação?</label>-->
-                            <!--<select name="" class="contactField" id="TRANSACAO"></select>-->
-
+                            <label class="input-label"><strong> Busca </strong></label>                        
+                            <select name="" class="contactField" id="SUA_MOEDA" onchange="Buscar('DISTANCIA', true);"></select>
                         </fieldset>
                     </div>
                 </div>
@@ -34,7 +29,9 @@
                 <div class="no-bottom">
                     <div>
                         <fieldset>
-                            <div id="DIVESTABELECIMENTO">
+                             <div id="DIVFILTRO">
+                             </div>
+                            <div id="DIVESTABELECIMENTO" style="overflow-x:auto; overflow-y:auto;">
                             </div>
                         </fieldset>
                     </div>
@@ -44,11 +41,9 @@
             <br />
         </div>
     </div>
-    <!--<script src="scripts/jquery-2.1.4.js"></script>-->
-    <script src="scripts/jquery-2.1.4min.js"></script>
+    <script src="scripts/jquery-2.2.1.min.js"></script>
     <script type="text/javascript" src="scripts/jqueryui.js"></script>
-    <script src="scripts/framework.plugins.min.js"></script>
-    <!--<script type="text/javascript" src="scripts/framework.plugins.js"></script>-->
+    <script type="text/javascript" src="scripts/framework.plugins.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
 </body>
 
