--- a/www/operacao.html
+++ b/www/operacao.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title></title>
+    <script type="text/javascript" src="../cordova.js"></script>
     <script type="text/javascript" src="scripts/paginas/operacao.js"></script>
 </head>
 <body>
