--- a/www/inicio.html
+++ b/www/inicio.html
@@ -190,7 +190,7 @@
         </div>
 
 </div>
-    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="../cordova.js"></script>
     <!--SCRIPTS BASICOS-->
     <!--<script src="scripts/jquery-2.1.4.js"></script>-->
     <script type="text/javascript" src="scripts/jquery-2.2.1.min.js"></script>
