--- a/www/inicio.html
+++ b/www/inicio.html
@@ -15,7 +15,8 @@
     <link rel="apple-touch-startup-image" sizes="1496x2048" href="images/splash/splash-screen-ipad-landscape-retina.png" media="(device-width: 768px)	and (orientation: landscape)	and (-webkit-device-pixel-ratio: 2)" />
     <title>COTACAO</title>
     <!--CSS DE ESTILOS-->
-
+    <script type="text/javascript" charset="utf-8" src="../cordova.js"></script>
+    <script type="text/javascript" charset="utf-8" src="../cordova_plugins.js"></script>
 
     <link href="styles/bootstrap.css" rel="stylesheet" />
     <link href="styles/style.css" rel="stylesheet" type="text/css">
@@ -190,8 +191,6 @@
         </div>
 
 </div>
-      <script type="text/javascript" src="cordova.js"></script>
-	<script type="text/javascript" src="cordova_plugins.js"></script>
     <!--SCRIPTS BASICOS-->
     <!--<script src="scripts/jquery-2.1.4.js"></script>-->
     <script type="text/javascript" src="scripts/jquery-2.2.1.min.js"></script>
