--- a/www/index.html
+++ b/www/index.html
@@ -23,8 +23,8 @@
     <link href="styles/font-awesome.css" rel="stylesheet" type="text/css">
     <link href="styles/animate.css" rel="stylesheet" type="text/css">
 
-    <script type="text/javascript" charset="utf-8" src="../cordova.js"></script>
-    <script type="text/javascript" charset="utf-8" src="../cordova_plugins.js"></script>
+    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+    <!--<script type="text/javascript" charset="utf-8" src="cordova_plugins.js"></script>-->
     <!--SCRIPTS BASICOS-->
     <!--<script type="text/javascript" src="scripts/jquery-2.1.4.js"></script>-->
     <script src="scripts/jquery-2.2.1.js"></script>
